@@ -1,8 +1,11 @@
 //
-// IGenericParameter.cs
+// IConstraintCollection.cs
 //
 // Author:
 //   Jb Evain (jbevain@gmail.com)
+//
+// Generated by /CodeGen/cecil-gen.rb do not edit
+// Mon Mar 27 14:34:38 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -28,11 +31,41 @@
 
 namespace Mono.Cecil {
 
-	public interface IGenericParameter : ITypeReference {
+	using System;
+	using System.Collections;
 
-		int Position { get; }
-		GenericParamAttributes Attributes { get; set; }
-		IGenericParameterProvider Owner { get; }
-		ConstraintCollection Constraints { get; }
+	public class ConstraintEventArgs : EventArgs {
+
+		private TypeReference m_item;
+
+		public TypeReference Constraint {
+			get { return m_item; }
+		}
+
+		public ConstraintEventArgs (TypeReference item)
+		{
+			m_item = item;
+		}
+	}
+
+	public delegate void ConstraintEventHandler (
+		object sender, ConstraintEventArgs ea);
+
+	public interface IConstraintCollection : ICollection {
+
+		TypeReference this [int index] { get; }
+
+		GenericParameter Container { get; }
+
+		event ConstraintEventHandler OnConstraintAdded;
+		event ConstraintEventHandler OnConstraintRemoved;
+
+		void Add (TypeReference value);
+		void Clear ();
+		bool Contains (TypeReference value);
+		int IndexOf (TypeReference value);
+		void Insert (int index, TypeReference value);
+		void Remove (TypeReference value);
+		void RemoveAt (int index);
 	}
 }
